# yolov7-ros

./: .gitignore  CMakeLists.txt  README.md  package.xml  requirements.txt
class_labels/: berkeley.txt  coco.txt
conf/: coco.yaml
launch/: yolov7.launch  yolov7_hpe.launch  zed_yolov7_od.launch
msg/:   ObjectTracking2D.msg    ObjectTracking2DArray.msg  BoundingBox2Df.msg  BoundingBox2Di.msg  Human.msg  HumanStamped.msg  Object.msg  ObjectsStamped.msg  Skeleton2D.msg
src/: detect.py  detect_pose.py  detect_ros.py  visualizer.py
src/deploy/triton-inference-server/: render.py
src/models/: experimental.py
src/utils/: google_utils.py  plots.py  ros.py
